--- a/src/components/Greeting/greeting.module.scss
+++ b/src/components/Greeting/greeting.module.scss
@@ -1,5 +1,13 @@
 @import "../../styles/global/global.module.scss";
 
-.greeting {
-  font-family: "palmer-lake";
+.greeting p {
+  font-family: $script-font;
+  font-size: 3rem;
+  color: $secondary-hotPink;
+  transform: rotate(-9deg);
+  transform-origin: bottom left;
+  position: absolute;
+  z-index: 10;
+  top: -1.5rem;
+  left: 1rem;
 }
