--- a/src/styles/global/global.module.scss
+++ b/src/styles/global/global.module.scss
@@ -1,2 +1,3 @@
 @import "./reset.module.scss";
-@import "./fonts.module.scss";
+@import "./typography.module.scss";
+@import "./colours.module.scss";
